# src/main/resources/public/api-doc.yml
@@ -164,11 +164,32 @@ tags:
       * Recuperar as informações persistidas solicitando para `/me`
       * Altera o dado nome solicitando para `/change-name`
       * Adicionar um novo carro, solicitando para `/include-new-car`
+      * Incluir o documento do carro adicionado, solicitando para `profile/car/{id}/document`
       * Removendo um carro já cadastrado, solicitando para `/remove-car`
       * Pedido uma nova a senha, solicitando para `/change-password`
       * Canelando sua conta, solicitando `/disabled-account`
 
       __OBS:__ Todas as solicitações é necessário que o cliente usuário esteja autenticado e seu token válido, dentro da data de validade.
+
+      Uma vez incluido o carro, este recurso passara por uma analise humana, um usuário administrador
+      poder avançar com o cadastro do carro do usuário em diferente status.
+
+                                                                                +------------+
+                                                                        +------>|  approved  |
+                                                                        |       +------------+
+                           +----------+          +-----------+          |
+                           |  create  |--------->|  waiting  |--------->|
+                           +----------+          +-----------+          |
+                                                                        |       +------------+
+                                                                        +------>|  reproved  |
+                                                                                +------------+
+
+
+      * create: O usuário faz o cadastro do carro, neste momento está aguardando o envio do documento.
+      * waiting: O usuário já submeteu o documento do carro.
+      * approved: o carro está cadastrado e autorizado no sistema.
+      * reproved: o carro está cadastrado mas, não tem autorização para acessar o estacionamento.
+
   - name: User
     x-displayName: Usuários
     description: |-
@@ -293,7 +314,7 @@ tags:
 
 paths:
     # security
-    /login/:
+    /login:
       post:
         summary: Acessar o sistema.
         operationId: login
@@ -321,7 +342,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InputLogin'
-    /request-renew-pass/:
+    /request-renew-pass:
       post:
         summary: Solicitação de nova senha
         operationId: renewPassword
@@ -399,7 +420,7 @@ paths:
             $ref: '#/components/responses/UnprocessableEntity'
 
     # registry students
-    /new-students/registry/:
+    /new-students/registry:
       post:
         summary: Registra um novo estudante no sistema
         tags:
@@ -442,7 +463,7 @@ paths:
             $ref: '#/components/responses/UnprocessableEntity'
           '500':
             $ref: '#/components/responses/InternalServerError'
-    /activate-registry/:
+    /activate-registry:
       get:
         summary: Ativação de conta
         tags:
@@ -473,7 +494,7 @@ paths:
             $ref: '#/components/responses/NotFound'
 
     # Profile
-    /profile/me/:
+    /profile/me:
       get:
         summary: Retornar o usuário dono do token
         description: |-
@@ -734,6 +755,56 @@ paths:
             $ref: '#/components/responses/Unauthorized'
           '500':
             $ref: '#/components/responses/InternalServerError'
+    /profile/car/{id}/document:
+      post:
+        summary: Documento do carro usuário
+        operationId: includeDocumentCar
+        tags:
+          - Profile
+        description: |-
+          ### Incluir documento do carro
+
+          O usuário poderá adicionar um documento para o carro afim de ser avaliado pelo administrador
+          do sistema.
+        parameters:
+          - in: header
+            name: Authorization
+            schema:
+              type: string
+              example: |-
+                Authorization: Bearer <token>
+            description: Token de acesso do usuário.
+          - in: path
+            name: id
+            description: identificar único do carro.
+            schema:
+              type: integer
+              format: int64
+              example: 1
+        requestBody:
+          required: true
+          description: Arquivo que será adicionado.
+          content:
+            multipart/form-data:
+              schema:
+                description: Arquivo pdf que será utilizado para avaliação do documento do carro.
+                type: object
+                properties:
+                  fileName:
+                    type: string
+                    format: binary
+
+        responses:
+          '204':
+            description: Documento enviado com sucesso.
+          '401':
+            $ref: '#/components/responses/Unauthorized'
+          '404':
+            $ref: '#/components/responses/NotFound'
+          '422':
+            $ref: '#/components/responses/UnprocessableEntity'
+          '500':
+            $ref: '#/components/responses/InternalServerError'
 
     # User
     /users/all:
@@ -831,7 +902,7 @@ paths:
             $ref: '#/components/responses/Forbidden'
           '500':
             $ref: '#/components/responses/InternalServerError'
-    /users/:
+    /users:
       get:
         summary: Retorna um recurso Usuário.
         description: |-
@@ -1090,7 +1161,7 @@ paths:
             $ref: '#/components/responses/UnprocessableEntity'
           '500':
             $ref: '#/components/responses/InternalServerError'
-    /users/enabled/access/:
+    /users/enabled/access:
       patch:
         summary: Autoriza acesso do usuário.
         tags:
@@ -1141,9 +1212,134 @@ paths:
             $ref: '#/components/responses/UnprocessableEntity'
           '500':
             $ref: '#/components/responses/InternalServerError'
+    /users/{id}/prepare-download/document:
+      get:
+        summary: Prepara download de documento.
+        tags:
+          - User
+        operationId: downloadDocument
+        description: |-
+          ### Solicitação para download do documento do carro
+
+          Regras para solicitação:
+          * Ser com usuário autenticado
+          * Ser autorizada com papel de administrador. [ROLE_ADMIN]
+
+          Retornar uma uri para baixar o arquivo que o usuário fez o upload do documento do carro
+          esta uri que será retornada tera um vida útil pre determinado, que será 5 minutos após a solicitação
+        parameters:
+          - in: header
+            name: Authorization
+            schema:
+              type: string
+              example: |-
+                Authorization: Bearer <token>
+            description: Token de acesso do usuário.
+          - in: path
+            name: id
+            schema:
+              type: integer
+              format: int64
+              example: 1
+        responses:
+          '200':
+            $ref: '#/components/responses/DocumentUriResponse'
+          '401':
+            $ref: '#/components/responses/Unauthorized'
+          '403':
+            $ref: '#/components/responses/Forbidden'
+          '404':
+            $ref: '#/components/responses/NotFound'
+          '500':
+            $ref: '#/components/responses/InternalServerError'
+    /users/car/{id}/document/approved:
+      patch:
+        summary: Aprova documento do carro.
+        tags:
+          - User
+        operationId: documentApproved
+        description: |-
+          ### Solicitação aprovar o documento do carro
+
+          Regras para solicitação:
+          * Ser com usuário autenticado
+          * Ser autorizada com papel de administrador. [ROLE_ADMIN]
+
+          Endpoint para notificar que a documentação do carro disponibilizada pelo usuário está em conformidade.
+        parameters:
+          - in: header
+            name: Authorization
+            schema:
+              type: string
+              example: |-
+                Authorization: Bearer <token>
+            description: Token de acesso do usuário.
+          - in: path
+            name: id
+            schema:
+              type: integer
+              format: int64
+              example: 1
+        responses:
+          '204':
+            description: Documento aprovado com sucesso.
+          '401':
+            $ref: '#/components/responses/Unauthorized'
+          '403':
+            $ref: '#/components/responses/Forbidden'
+          '404':
+            $ref: '#/components/responses/NotFound'
+          '500':
+            $ref: '#/components/responses/InternalServerError'
+    /users/car/{id}/document/reproved:
+      patch:
+        summary: Reprova o documento do carro disponíbilizado pelo usuário
+        tags:
+          - User
+        operationId: documentReproved
+        description: |-
+          ### Solicitação reprovar o documento do carro
+
+          Regras para solicitação:
+          * Ser com usuário autenticado
+          * Ser autorizada com papel de administrador. [ROLE_ADMIN]
+
+          Endpoint para notificar que a documentação do carro disponibilizada pelo usuário foi reprovada.
+        parameters:
+          - in: header
+            name: Authorization
+            schema:
+              type: string
+              example: |-
+                Authorization: Bearer <token>
+            description: Token de acesso do usuário.
+          - in: path
+            name: id
+            schema:
+              type: integer
+              format: int64
+              example: 1
+        responses:
+          '204':
+            description: Documento reprovado com sucesso.
+          '401':
+            $ref: '#/components/responses/Unauthorized'
+          '403':
+            $ref: '#/components/responses/Forbidden'
+          '404':
+            $ref: '#/components/responses/NotFound'
+          '500':
+            $ref: '#/components/responses/InternalServerError'
+
+#    /user/car/{id}/block-access:
+#
+#    /user/car/{id}/unlock-access:
+#
+
+
 
     # workstation
-    /workstations/:
+    /workstations:
       get:
         summary: Retonar uma lista de todas as estações de trabalho cadastradas.
         description: |-
@@ -1316,7 +1512,7 @@ paths:
 
 
     #recogizer
-    /receive-recognizer/:
+    /receive-recognizer:
       post:
         summary: Envia um novo reconhecimento.
         description: |-
@@ -1353,7 +1549,7 @@ paths:
         responses:
           '204':
             description: Reconhecimento recebido.
-    /all-recognizer/:
+    /all-recognizer:
       get:
         summary: Retorna todos os reconhecimentos.
         operationId: getAllRecognizers
@@ -1448,7 +1644,7 @@ paths:
             $ref: '#/components/responses/Forbidden'
           '500':
             $ref: '#/components/responses/InternalServerError'
-    /error-recognizer/:
+    /error-recognizer:
       get:
         summary: Error gerado quando um reconhecimento foi recebido.
         operationId: errorRecognizer
@@ -1757,41 +1953,15 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/Recognizer'
-    ErrorRecognizer:
+    DocumentUri:
       type: object
       properties:
-        errorMessage:
+        uri:
           type: string
-          description: Message da causa do error.
-          example: Um erro aconteceu.
-        originIp:
-          type: string
-          description: Ip do dispositivo que envio o reconhecimento.
-          example: 192.168.000.001
-        workstationName:
-          type: string
-          description: Nome da estação de trabalho que o dispositivo que envio o reconhecimento com error
-          example: Portão 01
-        date:
-          type: string
-          format: date-time
-          description: Momento que o erro aconteceu.
-          example: "2021-01-30T08:30:00Z"
-        trace:
-          type: string
-          description: Stacktrace do error gerado
-          example: "Caused by: java.lang.NoClassDefFoundError: classError
-                    at com.fasterxml.jackson.dataformat.yaml.snakeyaml.error.MarkedYAMLException.from (MarkedYAMLException.java:27)
-                    at com.fasterxml.jackson.dataformat.yaml.YAMLParser.nextToken (YAMLParser.java:351)
-                    at com.fasterxml.jackson.databind.deser.std.BaseNodeDeserializer.deserializeArray (JsonNodeDeserializer.java:431)
-                    at com.fasterxml.jackson.databind.deser.std.BaseNodeDeserializer.deserializeObject (JsonNodeDeserializer.java:258)
-                    at com.fasterxml.jackson.databind.deser.std.BaseNodeDeserializer.deserializeObject (JsonNodeDeserializer.java:255)
-                    at com.fasterxml.jackson.databind.deser.std.BaseNodeDeserializer.deserializeObject (JsonNodeDeserializer.java:255)
-                    at com.fasterxml.jackson.databind.deser.std.BaseNodeDeserializer.deserializeObject (JsonNodeDeserializer.java:255)
-                    at com.fasterxml.jackson.databind.deser.std.JsonNodeDeserializer.deserialize (JsonNodeDeserializer.java:68)
-                    at com.fasterxml.jackson.databind.deser.std.JsonNodeDeserializer.deserialize (JsonNodeDeserializer.java:15)
-                    at com.fasterxml.jackson.databind.ObjectMapper._readTreeAndClose (ObjectMapper.java:4044)
-                  "
+          example: "http:\\document.pdf"
+        ttl:
+          type: integer
+          example: 3600
 
 
 
@@ -1828,8 +1998,6 @@ components:
         - name
         - password
         - confirmPassword
-        - modelCar
-        - plateCar
       properties:
         email:
           description: e-mail da credencial do usuário, como ela que ele utilizara para acessar o sistema.
@@ -2168,6 +2336,41 @@ components:
           type: string
           example: Campo inválido
           description: descreve o erro o erro encontrado no campo.
+    ErrorRecognizer:
+      type: object
+      properties:
+        errorMessage:
+          type: string
+          description: Message da causa do error.
+          example: Um erro aconteceu.
+        originIp:
+          type: string
+          description: Ip do dispositivo que envio o reconhecimento.
+          example: 192.168.000.001
+        workstationName:
+          type: string
+          description: Nome da estação de trabalho que o dispositivo que envio o reconhecimento com error
+          example: Portão 01
+        date:
+          type: string
+          format: date-time
+          description: Momento que o erro aconteceu.
+          example: "2021-01-30T08:30:00Z"
+        trace:
+          type: string
+          description: Stacktrace do error gerado
+          example: "Caused by: java.lang.NoClassDefFoundError: classError
+                    at com.fasterxml.jackson.dataformat.yaml.snakeyaml.error.MarkedYAMLException.from (MarkedYAMLException.java:27)
+                    at com.fasterxml.jackson.dataformat.yaml.YAMLParser.nextToken (YAMLParser.java:351)
+                    at com.fasterxml.jackson.databind.deser.std.BaseNodeDeserializer.deserializeArray (JsonNodeDeserializer.java:431)
+                    at com.fasterxml.jackson.databind.deser.std.BaseNodeDeserializer.deserializeObject (JsonNodeDeserializer.java:258)
+                    at com.fasterxml.jackson.databind.deser.std.BaseNodeDeserializer.deserializeObject (JsonNodeDeserializer.java:255)
+                    at com.fasterxml.jackson.databind.deser.std.BaseNodeDeserializer.deserializeObject (JsonNodeDeserializer.java:255)
+                    at com.fasterxml.jackson.databind.deser.std.BaseNodeDeserializer.deserializeObject (JsonNodeDeserializer.java:255)
+                    at com.fasterxml.jackson.databind.deser.std.JsonNodeDeserializer.deserialize (JsonNodeDeserializer.java:68)
+                    at com.fasterxml.jackson.databind.deser.std.JsonNodeDeserializer.deserialize (JsonNodeDeserializer.java:15)
+                    at com.fasterxml.jackson.databind.ObjectMapper._readTreeAndClose (ObjectMapper.java:4044)
+                  "
 
   #Responses
   responses:
@@ -2289,6 +2492,12 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/ErrorRecognizer'
+    DocumentUriResponse:
+      description: Retorna um uri para baixar o documento com tempo de vida util.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/DocumentUri'
 
     # errors
     BadRequest:
